# External-Coordinate-Control-for-OpenManipulator-X

./: CMakeLists.txt  README.md  pick_moveit.cpp
